<resources>
    <string name="app_name">PigVer3</string>
    <string name="title_pig_game_version3">Pig Game Ver3</string>

    <string name="title_pig_game_version3_setting">Settings</string>

    <!-- menu.xml -->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <!-- playerOneLayout -->
    <string name="player_one_label">Player 1</string>
    <string name="player_one_text"></string>

    <!-- playerTwoLayout -->
    <string name="player_two_label">Player 2</string>
    <string name="player_two_text"></string>

    <!-- displayLayout -->
    <string name="display_name" />
    <string name="display_name_label">\'s turn AND turn point is </string>
    <string name="display_point">0</string>

    <!-- imageViewLayout -->
    <string name="roll_button">Roll</string>
    <string name="end_turn_button">End</string>

    <!-- playerOneScoreLayout -->
    <string name="player_one_score_label">Player 1 Total Score : </string>
    <string name="player_one_score">0</string>
    <!-- playerTwoScoreLayout -->
    <string name="player_two_score_label">Player 2 Total Score :</string>
    <string name="player_two_score">0</string>

    <string name="new_game_button">New Game</string>

    <!-- preference.xml -->
    <string name="set_player_name_category">Set Name</string>

    <string name="set_player_name_title">Set players name</string>
    <string name="set_player_name_summary">Check the box to set the player name</string>

    <string name="edit_player_one_name_title">Set player one name</string>
    <string name="edit_player_two_name_title">Set player two name</string>

</resources>
