<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pig_background"
    tools:context="jemin.uoregon.edu.pigver3.PigGameActivity">

    <LinearLayout
        android:id="@+id/playerOneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/playerOneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="0.36"
            android:text="@string/player_one_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playerOneText"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1.23"
            android:background="@drawable/editbox"
            android:ems="10"
            android:hint="Enter name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:text="@string/player_one_text"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerTwoLayout"
        android:layout_width="584dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.36"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerOneLayout">

        <TextView
            android:id="@+id/playerTwoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="0.36"
            android:text="@string/player_two_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playerTwoText"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1.23"
            android:background="@drawable/editbox"
            android:ems="10"
            android:hint="Enter name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:text="@string/player_two_text"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="102dp"
        android:layout_marginTop="185dp"
        android:layout_weight="0.41"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playerOneLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="102dp">

        <ImageView
            android:id="@+id/diceImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/displayLayout"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerTwoLayout"
            app:layout_constraintVertical_bias="0.504" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/endTurnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_turn_button"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/displayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="0.36"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLayout">

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/display_name"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displayNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name_label"
            android:textColor="@android:color/background_light"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/displayPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.41"
            android:text="@string/display_point"
            android:textColor="?attr/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerOneScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/playerOneScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_one_score_label"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:text="@string/player_one_score"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerTwoScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.41"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/playerOneScoreLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/playerTwoScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_two_score_label"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:text="@string/player_two_score"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/new_game_button"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTwoScoreLayout"
        app:layout_constraintVertical_bias="0.966"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
